[package]
name = "wasm_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
quick-xml = "0.36.1"
# rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen = "0.2.93"
# wasm-bindgen-rayon = { version = "1.2.1" }
